compiler/testData/diagnostics/tests/smartCasts/varnotnull/varIntNull.kt
fun foo(): Int {
    var i: Int? = <!VARIABLE_WITH_REDUNDANT_INITIALIZER!>42<!>
    i = null
    return <!TYPE_MISMATCH!>i + 1<!>
}
